--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,6 +86,13 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/patient-info/patient-info-dialog.controller.js"></script>
+    <script src="app/entities/patient-info/patient-info-detail.controller.js"></script>
+    <script src="app/entities/patient-info/patient-info-delete-dialog.controller.js"></script>
+    <script src="app/entities/patient-info/patient-info.state.js"></script>
+    <script src="app/entities/patient-info/patient-info.service.js"></script>
+    <script src="app/entities/patient-info/patient-info.search.service.js"></script>
+    <script src="app/entities/patient-info/patient-info.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
