Added entity CLINICAL_NOTE + many-to-one relationship to PATIENT_INFO

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,13 @@
     <script src="app/entities/patient-info/patient-info.search.service.js"></script>
     <script src="app/entities/patient-info/patient-info.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/clinical-note/clinical-note-dialog.controller.js"></script>
+    <script src="app/entities/clinical-note/clinical-note-detail.controller.js"></script>
+    <script src="app/entities/clinical-note/clinical-note-delete-dialog.controller.js"></script>
+    <script src="app/entities/clinical-note/clinical-note.state.js"></script>
+    <script src="app/entities/clinical-note/clinical-note.service.js"></script>
+    <script src="app/entities/clinical-note/clinical-note.search.service.js"></script>
+    <script src="app/entities/clinical-note/clinical-note.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
