Added entity CAP_MODEL. Unit test & protractor OK.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -101,6 +101,13 @@
     <script src="app/entities/clinical-note/clinical-note.service.js"></script>
     <script src="app/entities/clinical-note/clinical-note.search.service.js"></script>
     <script src="app/entities/clinical-note/clinical-note.controller.js"></script>
+    <script src="app/entities/cap-model/cap-model-dialog.controller.js"></script>
+    <script src="app/entities/cap-model/cap-model-detail.controller.js"></script>
+    <script src="app/entities/cap-model/cap-model-delete-dialog.controller.js"></script>
+    <script src="app/entities/cap-model/cap-model.state.js"></script>
+    <script src="app/entities/cap-model/cap-model.service.js"></script>
+    <script src="app/entities/cap-model/cap-model.search.service.js"></script>
+    <script src="app/entities/cap-model/cap-model.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
