Added AUX_FILE entity. Run unit test & protractor OK. Relationship many-to-one to PATIENT_INFO

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,6 +108,13 @@
     <script src="app/entities/cap-model/cap-model.service.js"></script>
     <script src="app/entities/cap-model/cap-model.search.service.js"></script>
     <script src="app/entities/cap-model/cap-model.controller.js"></script>
+    <script src="app/entities/aux-file/aux-file-dialog.controller.js"></script>
+    <script src="app/entities/aux-file/aux-file-detail.controller.js"></script>
+    <script src="app/entities/aux-file/aux-file-delete-dialog.controller.js"></script>
+    <script src="app/entities/aux-file/aux-file.state.js"></script>
+    <script src="app/entities/aux-file/aux-file.service.js"></script>
+    <script src="app/entities/aux-file/aux-file.search.service.js"></script>
+    <script src="app/entities/aux-file/aux-file.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
