Added BASELINE_DIAGNOSIS entity. Run junit test & protractor OK. Relationship many-to-one to PATIENT_INFO

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,6 +108,13 @@
     <script src="app/entities/cap-model/cap-model.service.js"></script>
     <script src="app/entities/cap-model/cap-model.search.service.js"></script>
     <script src="app/entities/cap-model/cap-model.controller.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis-dialog.controller.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis-detail.controller.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis-delete-dialog.controller.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis.state.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis.service.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis.search.service.js"></script>
+    <script src="app/entities/baseline-diagnosis/baseline-diagnosis.controller.js"></script>
     <script src="app/entities/aux-file/aux-file-dialog.controller.js"></script>
     <script src="app/entities/aux-file/aux-file-detail.controller.js"></script>
     <script src="app/entities/aux-file/aux-file-delete-dialog.controller.js"></script>
